# stt

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  docker_usage.md  howto_git.txt  lmstudio_test.py  manage.py  openapi.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  transkribe.py
.githooks/: pre-push
.github/: copilot-instructions.md  dependabot.yml
.github/actions/setup-python/: action.yml
.github/skills/git-merge-workflow/: SKILL.md
.github/skills/git_merge_workflow/: SKILL.md
.github/skills/github-actions/: SKILL.md
.github/skills/github_actions/: SKILL.md
.github/skills/oauth2/: SKILL.md
.github/workflows/: backend-quality.yml  backend-security.yml  backend-test.yml  ci.yml  dependabot-auto-merge.yml  docker-build.yml  flutter-ci.yml  ml-ci.yml
data/audio/: README.md
data/output/: meeting.txt  meeting_struktur.md  meeting_zusammenfassung.md  passwoerter_raus_aus_USCloud.txt  passwoerter_raus_aus_USCloud_sprecher.md  passwoerter_raus_aus_USCloud_struktur.md  passwoerter_raus_aus_USCloud_zusammenfassung.md  result_sprecher.md  result_struktur.md  result_zusammenfassung.md  test2.txt  test2_sprecher.md  test3.txt  test4.txt  test4_sprecher.md  test4_struktur.md  test4_zusammenfassung.md  zurechtfinden.txt  zurechtfinden_2.txt  zurechtfinden_sprecher.md  zurechtfinden_struktur.md  zurechtfinden_struktur_1.md  zurechtfinden_zusammenfassung.md  zurechtfinden_zusammenfassung_1.md
docs/: SBOM.md  Umsetzungsplan.md  anwendungsuebersicht.md  market-analysis.md
docs/arc42/: 01_einfuehrung.md  02_randbedingungen.md  03_kontextabgrenzung.md  04_loesungsstrategie.md  05_bausteinsicht.md  06_laufzeitsicht.md  07_verteilungssicht.md  08_entscheidungen.md  ADR-06_zero_trust.md  ADR-07_authentifizierung.md  ADR-08_verschluesselung.md  ADR-09_eu_hosting.md  ADR-10_mobile_app.md  ADR-11_storage_backends.md  ADR-12_konfiguration_api.md  ADR-13_dsgvo_konzept.md  ADR-14_api_security.md  ADR-15_django_migration.md  README.md
docs/req42/: README.md  funktional.md  glossar.md  qualitaet.md  randbedingungen.md  stakeholder.md  ziele.md
k8s/base/: kustomization.yaml  minio.yaml  namespace.yaml  networkpolicy-ingress-egress-stt.yaml  ollama.yaml  postgres.yaml
k8s/helm/: values-k3s.yaml
k8s/helm/stt/: Chart.yaml  values.yaml
k8s/monitoring/: grafana-dashboard-stt.yaml  networkpolicy-prometheus-egress-patch.yaml  networkpolicy-promtail-egress-patch.yaml  prometheus-config-patch.yaml  promtail-config-patch.yaml  promtail-daemonset-patch.yaml
mobile/: Dockerfile  README.md  nginx.conf  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/integration_test/: app_test.dart
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/models/: connection_status.dart  job_result.dart  processing_config.dart  recording_entry.dart  recording_state.dart  result_version.dart  server_config.dart  upload_status.dart
mobile/lib/screens/: history_screen.dart  home_screen.dart  job_detail_screen.dart  job_edit_screen.dart  result_screen.dart  settings_screen.dart
mobile/lib/services/: audio_recording.dart  auth.dart  connectivity.dart  notification.dart  processing_config.dart  recording_history.dart  server_connection.dart  upload.dart  web_oauth_stub.dart  web_oauth_web.dart
mobile/lib/widgets/: hal_eye.dart
mobile/test/: auth_test.dart  connectivity_test.dart  correction_test.dart  e2e_test.dart  home_screen_test.dart  models_test.dart  processing_config_service_test.dart  recording_history_test.dart  result_screen_test.dart  upload_service_test.dart
mobile/web/: callback.html  index.html
sbom/: backend-python.cdx.json  container-flutter.cdx.json  container-image.cdx.json  container-ml.cdx.json  container-server.cdx.json  index.cdx.json  mobile-flutter.cdx.json
scripts/: build-containers.sh  deploy-local-docker.sh  deploy-remote-docker.sh  deploy-remote-k3s.sh  deploy-remote.sh  generate-sbom-md.py  generate-sbom.sh
services/ml/: Dockerfile  main.py  requirements.txt
src/stt/: __init__.py  __main__.py  client.py  config.py  diarize.py  logging_setup.py  prompts.py  pyannote.py  server.py  settings.py  summarize.py  transcribe.py  urls.py  whisper_common.py  wsgi.py
src/stt/api/: admin.py  apps.py  audit.py  metrics.py  middleware.py  models.py  serializers.py  (+6 more)
tests/: conftest.py  test_admin.py  test_audio_storage.py  test_audit.py  test_cli.py  test_client.py  test_config.py  test_config_api.py  test_correction.py  test_diarize.py  test_gdpr.py  test_models.py  test_monitoring.py  test_multi_tenancy.py  test_oauth2.py  test_reverse_proxy.py  test_server.py  test_storage.py  test_summarize.py  test_tasks.py  test_throttling.py  test_transcribe.py  test_whisper_common.py
(+23 files in other folders)
