[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stt"
version = "0.1.0"
description = "Lokale Meeting-Transkription und Zusammenfassung"
authors = [
    {name = "Rolf"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2",
    "django-cors-headers==4.7.0",
    "django-oauth-toolkit==3.0.1",
    "django-q2==1.10.0",
    "djangorestframework==3.16.0",
    "drf-spectacular==0.29.0",
    "gunicorn==23.0.0",
    "numpy==2.4.5",
    "psycopg[binary]==3.3.4",
    "python-dotenv==1.2.1",
    "boto3>=1.43.9",
    "cryptography>=44.0.0",
    "requests==2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-django>=4.12.0",
    "ruff>=0.15.13",
    "pre-commit>=3.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "T10", # flake8-debugger
    "T20", # flake8-print
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/stt/__main__.py" = ["T20"]
"src/stt/client.py" = ["T20"]
"tests/**" = ["T20"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
stt = "stt.__main__:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
DJANGO_SETTINGS_MODULE = "stt.settings"

[tool.coverage.run]
source = ["stt"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests"]
